--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 python-telegram-bot==20.7
-openai>=1.3.7
-httpx
-tqdm
-yfinance
-pandas
+openai==2.7.1
+requests==2.32.5
+numpy==2.3.4
+pandas==2.3.3
+beautifulsoup4==4.14.2
+websockets==15.0.1
+pytz==2025.2
+python-dateutil==2.9.0.post0
+tzdata==2025.2
+cffi==2.0.0
+typing-extensions==4.15.0
+anyio==4.11.0
+httpx==0.25.2
