--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 python-telegram-bot[asyncio]==20.7
 openai==2.7.1
+httpx==0.25.2
+anyio==4.11.0
+typing-extensions==4.15.0
+pydantic==2.12.4
+pydantic-core==2.41.5
 requests==2.32.5
