--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.0.3
 python-telegram-bot==13.15
+Flask==3.0.3
+openai==1.47.0
+httpx==0.27.0
 requests==2.32.3
-gunicorn==23.0.0
+tqdm==4.67.1
