--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-python-telegram-bot==13.15
 Flask==3.0.3
-openai==1.47.0
-httpx==0.27.0
+python-telegram-bot==13.15
 requests==2.32.3
-tqdm==4.67.1
-APScheduler==3.6.3
+gunicorn==23.0.0
