--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,21 @@ Flask==3.0.3
 python-telegram-bot==13.15
 requests==2.32.3
 gunicorn==23.0.0
+APScheduler==3.6.3
+cachetools==4.2.2
+charset-normalizer==3.4.4
+idna==3.11
+urllib3==2.5.0
+blinker==1.9.0
+certifi==2025.10.5
+click==8.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+pytz==2025.2
+setuptools==80.9.0
+six==1.17.0
+tzlocal==5.3.1
+Werkzeug==3.1.3
+packaging==25.0
+tornado==6.1
