--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,8 @@ gunicorn==23.0.0
 APScheduler==3.6.3
 cachetools==4.2.2
 charset-normalizer==3.4.4
-idna==3.11
-urllib3==2.5.0
+urllib3==1.26.16
 blinker==1.9.0
-certifi==2025.10.5
 click==8.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -20,3 +18,6 @@ tzlocal==5.3.1
 Werkzeug==3.1.3
 packaging==25.0
 tornado==6.1
+certifi==2023.7.22
+idna==3.4
+requests==2.31.0
