--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.3
-python-telegram-bot==20.7
+python-telegram-bot==21.6
 requests==2.32.3
 gunicorn==23.0.0
 APScheduler==3.6.3
@@ -20,4 +20,5 @@ packaging==25.0
 tornado==6.1
 certifi==2023.7.22
 idna==3.4
-openai>=1.1.1
+openai==2.7.2
+httpx==0.25.2
