--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-openai>=1.0.0
-Flask==3.0.3Flask==3.0.3
-python-telegram-bot==21.6
+Flask==3.0.3
+python-telegram-bot==20.8
 requests==2.32.3
 gunicorn==23.0.0
 APScheduler==3.6.3
