--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+openai>=1.0.0
 Flask==3.0.3
-python-telegram-bot==20.8
+python-telegram-bot==21.6
 requests==2.32.3
 gunicorn==23.0.0
 APScheduler==3.6.3
@@ -20,5 +21,4 @@ packaging==25.0
 tornado==6.1
 certifi==2023.7.22
 idna==3.4
-openai==2.7.2
 httpx==0.25.2
