--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-openai>=2.7.2
 Flask==3.0.3
+hypercorn==0.15.0
 python-telegram-bot==21.6
+openai==2.7.2
 requests==2.32.3
 gunicorn==23.0.0
-APScheduler==3.6.3
-cachetools==4.2.2
-charset-normalizer==3.4.4
-urllib3==1.26.16
-blinker==1.9.0
-click==8.3.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-pytz==2025.2
-setuptools==80.9.0
-six==1.17.0
-tzlocal==5.3.1
-Werkzeug==3.1.3
-packaging==25.0
-tornado==6.1
-certifi==2023.7.22
-idna==3.4
