--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-Flask==3.0.3
-hypercorn==0.15.0
 python-telegram-bot==21.6
-openai==2.7.2
-requests==2.32.3
-gunicorn==23.0.0
+httpx==0.27.2
+certifi
