--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,47 @@
+# Web servers
 fastapi==0.111.2
+flask==3.0.3
 uvicorn==0.25.0
+hypercorn==0.15.0
+werkzeug==3.1.3
+
+# Telegram
 python-telegram-bot==21.6
+
+# OpenAI
 openai==2.7.2
+
+# HTTP / async libraries
+httpx==0.28.1
+httpcore==1.0.9
+anyio==4.11.0
 aiohttp==3.9.3
+
+# Utilities
+pydantic==2.12.4
+pydantic-core==2.41.5
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+distro==1.9.0
+click==8.3.0
+blinker==1.9.0
+tqdm==4.67.1
+packaging==25.0
+priority==2.0.0
+jiter==0.12.0
+
+# HTML / templating
+jinja2==3.1.6
+markupsafe==3.0.3
+itsdangerous==2.2.0
+
+# Networking
+certifi==2025.11.12
+urllib3==2.5.0
+idna==3.11
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+hyperframe==6.1.0
+wsproto==1.3.1
+sniffio==1.3.1
